--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
