--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "openai":"4.24.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
