--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "openai":"4.24.7"
+    "openai":"4.24.7",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
