Added OpenAi Secret Key, OpenAi Organization Key, 5 worth of tokens

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -5,6 +5,6 @@ JWT_SECRET=""
 
 COOKIE_SECRET=""
 
-OPEN_AI_SECRET=""
+OPEN_AI_SECRET="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"
 
-OPENAI_ORAGANIZATION_ID=""
+OPENAI_ORAGANIZATION_ID="org-GRM9tarTFgomPbxmCjAi32Xi"
